# devops-study-app

./: .pre-commit-config.yaml
.devcontainer/: devcontainer.json
.github/workflows/: backend-tests.yaml  frontend-tests.yaml  release-please.yaml
scripts/: setup_project
src/backend/: CHANGELOG.md  pyproject.toml
src/backend/src/data/: sessions.csv
src/frontend/: Dockerfile  pyproject.toml
