[project]
name = "study-tracker-frontend"
version = "0.0.0"
description = "Frontend for DevOps Study Tracker application"
readme = "README.md"
authors = [{ name = "Vinay Sudani", email = "vinay@example.com" }]
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.3",
    "requests>=2.34.2",
]

[project.scripts]
study-tracker-frontend = "frontend.main:main"


[tool.hatch.build.targets.wheel]
packages = ["src/frontend"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "responses>=0.26.2",
    "ruff>=0.15.22",
]
